<resources>
    <string name="app_name">Gordian</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="contact_fragment_label">Contacts</string>
    <string name="message_fragment_label">Messages</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="send">Send</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="gimme_ip">IP of the server</string>
    <string name="menu_add">Add</string>
    <string name="contact_name">Name of the contact</string>
    <string name="delete">Delete</string>
    <string name="create_a_secret_key">Create a secret key</string>
    <string name="read_a_secret_key">Read a secret key</string>
    <string name="secret_key_gen_already_running">The secret is already being generated</string>
    <string name="exchange_secret_menu">Exchange</string>
    <string name="exchange_your_secret_key">Exchange your secret key</string>
    <string name="show_your_secret_key">Show your secret key</string>
    <string name="read_your_secret_key">Read your secret key</string>
    <string name="messages">Messages</string>
    <string name="server_address">Server address</string>
    <string name="change_server_address">Change the server used by this application</string>
    <string name="settings">Settings</string>
    <string name="login_credentials">Please login with your credentials</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_request_running">A login request is already in progress</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="exchange_keys">Exchange keys</string>
    <string name="no_secret_key">The exchanged secret with this contact is expired or non-existent</string>
    <string name="waiting_confirm_exchange">Waiting for the peer to confirm the exchange</string>
    <string name="sending_hello_message">Sending hello message…</string>
    <string name="waiting_hello_reply">Waiting for hello reply message</string>
    <string name="waiting_hello_message">Waiting for hello message</string>
    <string name="confirm_the_exchange">Confirm the exchange</string>
    <string name="pairing_failed">Pairing failed</string>
    <string name="hello_authenticate_failed">Pairing failed because the hello message could not be authenticated</string>
    <string name="hello_message_had_payload">Pairing failed because hello message contained payload</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="wait_pairing_completes">Please wait until the pairing completes</string>
    <string name="try_again">Try again</string>
    <string name="get_back_messaging">Get back to messaging</string>
    <string name="username_cannot_empty">Username cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="max_characters_first_half">Can be maximum </string>
    <string name="max_characters_second_half"> characters</string>
    <string name="log_out">Log out</string>
    <string name="empty_msg_not_sent">Empty message will not be sent</string>
    <string name="confirm_interrupt_pairing">Are you sure you want to interrupt the pairing process?</string>
    <string name="abort_pairing">Abort pairing</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_contact">Add a contact</string>
    <string name="ok">OK</string>
    <string name="pairing_timed_out">Pairing timed out</string>
</resources>