<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".messages.MessagesFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="6dp"
        android:paddingTop="10dp"
        android:paddingHorizontal="12dp"
        >


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/msg_field"
            app:layout_constraintTop_toTopOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginBottom="6dp"
            />

        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/msg_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/button_second"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_second"
            android:layout_marginEnd="10dp"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/expired_overlay_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/transparent_overlay"
        android:focusable="true"
        android:clickable="true"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            style="@style/title_text"
            android:textAlignment="center"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:text="@string/no_secret_key"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exchange_key_overlay_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_keys"
            />
    </LinearLayout>

</FrameLayout>